<resources>
    <string name="app_name">Driver Application</string>
    <string name="action_settings">Settings</string>
    <string name="driver_app_welcome_text">Driver Application</string>
    <string name="register_button">REGISTER</string>
    <string name="password_label">Password</string>
    <string name="full_name_label">Full name</string>
    <string name="username_label">Username</string>
    <string name="car_model_label">Car Model</string>
    <string name="date_label">Date</string>
    <string name="login_label">LOGIN</string>
    <string name="start_location_label">Start location :</string>
    <string name="end_location_label">End location :</string>
    <string name="number_passenger_label">Number of passengers :</string>
    <string name="select_pickup_time">Select pickup time</string>
    <string name="price_per_pass_label">Price per passenger :</string>
    <string name="add_journey_button">Add journey</string>
    <string name="edit_journey_button">Edit journey</string>
    <string name="view_journeys_button">View Journeys</string>
    <string name="my_profile_button">My profile</string>
    <string name="driver_name_holder">Driver Name</string>
    <string name="age_label">Age</string>
    <string name="weather_holder">Weather status</string>
    <string name="cancel_button">Cancel</string>
    <string name="full_name_profile">Full Name :</string>
    <string name="username_profile">Username :</string>
    <string name="password_profile">Password :</string>
    <string name="rating_label">Rating :</string>
    <string name="num_journeys_label">Number of journeys :</string>
    <string name="back_button">Back</string>
    <string name="save_button">Save changes</string>
    <string name="logout_button">Logout</string>
    <string name="splash_text">Driver Application</string>
</resources>
